Fixed footer formatting and alignment.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -61,5 +61,4 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: #f6f9f9;
-  height: 5%;
 }
